[package]
name = "signal-stderr-print"
version = "0.1.0"
authors = ["mlcruz1 <mlcruz@inf.ufrgs.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.'cfg(unix)'.dependencies]
signal-hook-async-std = "0.1.0"
futures = "0.3.8"
signal-hook = "0.2.1"
async-std = {version = "1.7.0", features = ["attributes"]}
